--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <nav>
         <ul>
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li class="#"><a href="chamber.html">Chamber</a></li>
             <li class="#"><a href="site-plan.html">Site Plan</a></li>
             <li class="#"><a href="form.html">Form</a></li>
